works better on iphone maybe

--- a/_contact.html
+++ b/_contact.html
@@ -23,12 +23,12 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarCollapse">
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link disabled" href="#">Home</a>
+                        <li class="nav-item">
+                            <a class="nav-link" href="index.html">Home</a>
                         </li>
-                        <!--<li class="nav-item">
-                            <a class="nav-link" href="contact.html">Contact</a>
-                        </li>-->
+                        <li class="nav-item active">
+                            <a class="nav-link disabled" href="#">Contact</a>
+                        </li>
                         <li class="nav-item">
                             <a class="nav-link" href="apcspnotes/index.html">CSPNotes</a>
                         </li>
@@ -39,32 +39,13 @@
                 </div>
             </nav>
         </header>
+        
         <!-- Begin page content -->
-        <div class="bg">
-            <div class="float-container">
-                <div class="float-child">
-                    <h1>Justus' Home on the Internet</h1>
-                    <p class="lead">
-                        I'm a high school student, and I spend about ninety percent of my free time programming and working on various projects. 
-                        I mainly work on projects that revolve around data analysis and contain extensive backend systems because of the challenge and importance of those systems. 
-                        That said, I really enjoy all layers of the stack. 
-                    </p>
-                    <p class="lead">
-                        I mainly write Python, JavaScript, Java, C#, C/C++, and GO. 
-                        I also know a little bit of other languages like Rust and Swift, but I do not have the expertise in these as I do in my main languages.
-                        Check out my <a href="https://github.com/Juicestus"> Github</a> for some of my open source projects.
-                    </p>
-                <h2>Contact</h2>
-                    <p class="lead">
-                        Email me at
-                        <a href="mailto:jus@gtsbr.org" class="footer-link">jus@gtsbr.org</a>
-                    </p>
-                </div>
-                <div class="float-child">
-                    <img src="img/me.jpg" class="main rounded" alt="Me!" width="333">
-                </div>
-            </div>
+        <div class="bg" style="padding-top: 200px;">
+        <main role="main" class="container">
+        email at jus@gtsbr
         </div>
+        </main>
         <!-- Sticky Footer -->
         <footer class="footer">
             <div class="container">
@@ -88,3 +69,6 @@
         </footer>
     </body>
 </html>
+
+
+
