--- a/contact.html
+++ b/contact.html
@@ -1,76 +1,1 @@
-<!DOCTYPE html>
-<meta charset="UTF-8">
-<html lang="en">
-    <head>
-        <link rel="stylesheet" href="css/index.css">
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-        <meta name="description" content="Justus' personal website.">
-        <meta name="keywords" content="justus,languell,justus languell,juicestus">
-        <meta name="author" content="Justus Languell">
-        <title>Justus' Homepage!</title>
-        <link rel="icon" href="img/uzi.png">
-        <script src="js/index.js"></script>
-    </head>
-    <body>
-        <!-- Fixed navbar -->
-        <header>
-            <nav class="navbar navbar-expand-md navbar-dark fixed-top">
-                <img src="img/uzi.png" class="rounded picon" alt="Icon" height="30" width="30">
-                <a style="margin-left: 20px;" class="navbar-brand" href="#">Justus' Website</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarCollapse">
-                    <ul class="navbar-nav mr-auto">
-                        <li class="nav-item">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
-                        <li class="nav-item active">
-                            <a class="nav-link disabled" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="apcspnotes/index.html">CSPNotes</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="hbar.html">HBar</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-        </header>
-        
-        <!-- Begin page content -->
-        <div style="padding-top: 200px; background-color: black;">
-        <main role="main" class="container">
-            <div class="row">
-                <h2 style="margin-left:00px;font-size:180px;"><a class="nav-link" href="mailto:jus@gtsbr.org">jus@gtsbr.org</a></h2>
-            </div>
-        </div>
-        </main>
-        <!-- Sticky Footer -->
-        <footer class="footer">
-            <div class="container">
-                <div class="row">
-                    <div class="col-4">
-                        <span class="text-muted">© Justus Languell, 2021 </span>
-                    </div>
-                    <div class="col-4">
-                        <span class="text-muted">
-                            <a href="mailto:jus@gtsbr.org" class="footer-link">jus@gtsbr.org</a>
-                        </span>
-                    </div>
-                    <div class="col-4">
-                        <!-- Bootstrap Credit, bc i'm nice -->
-                        <span class="text-muted">
-                            <a href="https://getbootstrap.com/" class="footer-link">Bootstraped 😉</a>
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </footer>
-    </body>
-</html>
-
-
-
+email me at jus@gtsbr.org
