--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                     </p>
                     <p class="lead">
                         I mainly write Python, JavaScript, Java, C#, C/C++, and GO. 
-                        I also know a little bit of other languages like Rust and Swift, but I do not have the expertise in these as I do in my main languages.
+                        I also know a little bit of other languages like Ruby, Swift, PHP, and Rust, but I do not have the expertise in these as I do in my main languages.
                         Check out my <a href="https://github.com/Juicestus"> Github</a> for some of my open source projects.
                     </p>
                 <h2>Contact</h2>
