--- a/apcspnotes/index.html
+++ b/apcspnotes/index.html
@@ -4,7 +4,7 @@ p {
 }
 </style>
 <body style='background-color: FFFBFB;'>
-<center><p><a href='../index.html'>Home</a> | <a href='../contact.html'>Contact</a> | <a href=''>AP CSP Notes Archive</a></p></center>
+<center><p><a href='../index.html'>Home</a> | <a href='../contact.html'>Contact</a> | <a href='../code/index.html'>Code Archive</a> | <a href=''>AP CSP Notes Archive</a></p></center>
 <h1>AP Computer Science Principles</h1>
 <h3>Cornell Notes Library by Justus Languell</h3>
 <ul>
