--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
                             <a class="nav-link" href="contact.html">Contact</a>
                         </li>-->
                         <li class="nav-item">
+                            <a class="nav-link" href="code/index.html">Code</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="apcspnotes/index.html">CSPNotes</a>
                         </li>
                         <li class="nav-item">
@@ -52,7 +55,7 @@
                     <p class="lead">
                         I mainly write Python, JavaScript, Java, C#, C/C++, and GO. 
                         I also know a little bit of other languages like Ruby, Swift, PHP, and Rust, but I do not have the expertise in these as I do in my main languages.
-                        Check out my <a href="https://github.com/Juicestus"> Github</a> for some of my open source projects.
+                        Check out my <a href="https://github.com/Juicestus"> Github</a> for some of my open source projects. <a href="code/index.html">Here for more code!</a>
                     </p>
                 <h2>Contact</h2>
                     <p class="lead">
