--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,11 @@ p {
 <body style='background-color: FFFBFB;'>
 <center><p><a href='../index.html'>Home</a> | <a href='../contact.html'>Contact</a> | <a href=''>Code Archive</a> | <a href='../apcspnotes/index.html'>AP CSP Notes Archive</a></p></center>
 <h1>Extra Code Archive</h1>
-<h3>Rosseta Code Entries</h3>
+<h2><a href="https://github.com/Juicestus/">GITHUB</a></h2>
+<hr>
+<h3>Stuff not worthy of GitHub or Rosseta Code entries</h3>
 <ul>
-    <li><a href='https://rosettacode.org/wiki/Polynomial_synthetic_division'>C++ Polynomial Synthetic Division</a> (scroll down to the C++ one, thats mine) or <a href="synthdiv.cpp">Raw code</a></li>
+	<li><b>C++: </b> <a href='https://rosettacode.org/wiki/Polynomial_synthetic_division'>C++ Polynomial Synthetic Division</a> (scroll down to the C++ one, thats mine) or <a href="synthdiv.cpp">Raw code</a></li>
+	<li><b>JavaScript: </b> <a href='nosig.html'>No Signal Screen</a> - Bounce a DIV inside a DIV (Code + Demo)</li>
 </ul>
 </body>
