--- a/code/index.html
+++ b/code/index.html
@@ -12,5 +12,6 @@ p {
 <ul>
 	<li><b>C++: </b> <a href='https://rosettacode.org/wiki/Polynomial_synthetic_division'>C++ Polynomial Synthetic Division</a> (scroll down to the C++ one, thats mine) or <a href="synthdiv.cpp">Raw code</a></li>
 	<li><b>JavaScript: </b> <a href='nosig.html'>No Signal Screen</a> - Bounce a DIV inside a DIV (Code + Demo)</li>
+	<li><b>Python: </b> <a href='chrome.html'>Chrome</a> - Google Chrome Terminal Launcher with Search Query (Code + Download + Setup)</li> 
 </ul>
 </body>
