--- a/code/index.html
+++ b/code/index.html
@@ -8,7 +8,7 @@ p {
 <h1>Extra Code Archive</h1>
 <h2><a href="https://github.com/Juicestus/">GITHUB</a></h2>
 <hr>
-<h3>Stuff not worthy of GitHub or Rosseta Code entries</h3>
+<h3>Rosseta Code entries or stuff not worthy of GitHub. Just screw'n around ig.</h3>
 <ul>
 	<li><b>C++: </b> <a href='https://rosettacode.org/wiki/Polynomial_synthetic_division'>C++ Polynomial Synthetic Division</a> (scroll down to the C++ one, thats mine) or <a href="synthdiv.cpp">Raw code</a></li>
 	<li><b>JavaScript: </b> <a href='nosig.html'>No Signal Screen</a> - Bounce a DIV inside a DIV (Code + Demo)</li>
