--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<h1>GTSBR</h1>
-<p>Game by Justus Languell</p>
-<h2>Downloads</h2>
-<h3><a href="GameWin64.zip">Windows 64-bit</h3>
+<script>
+window.location.replace("https://www.justusl.com/");
+</script>
