--- a/index.html
+++ b/index.html
@@ -1,2 +1,12 @@
-<script>
-</script>
+<style>
+body {
+	background-color: #cdcdcd;
+	font-family: "Comic Sans MS";
+}
+</style>
+
+<body>
+<h1> Hello, World </h1>
+<p> This is a utility domain owned by jus@gtsbr.org </p>
+<img src="bigman.gif" alt="funny gif">
+</body>
