--- a/404.html
+++ b/404.html
@@ -1,13 +1,4 @@
-<!DOCTYPE html>
-<meta charset="UTF-8">
-<html lang="en">
-<link rel="icon" href="static/logo.jpeg">
-<link rel="stylesheet" type="text/css" href="static/style.css">
-<table><tr><td>
-<img class="logo" src="static/logo.jpeg">
-</td><td><h1 class="head">Torque Wiki</h1></td></tr></table>
-<div id="content">
-</div>  
-<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/1.9.0/showdown.min.js"></script>
-<script src="static/app.js"></script>
-</html>
+<script>
+  window.location.href = "https://justusl.com/";
+</script>
+<h1>Justus' Utility Domain</h1>
